--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Paintjs</title>
   </head>
   <body>
-    <canvas id="jscanvas" class="canvas"></canvas>
+    <canvas id="jsCanvas" class="canvas"></canvas>
     <div class="controls">
       <div class="controls__range">
         <input
@@ -24,7 +24,7 @@
         <button id="jsMode">Fill</button>
         <button id="jsSave">Save</button>
       </div>
-      <div class="controls__colors" id="jscolor">
+      <div class="controls__colors" id="jsColor">
         <div class="controls__color" style="background-color: #2c2c2c"></div>
         <div class="controls__color" style="background-color: white"></div>
         <div class="controls__color" style="background-color: #ff3b30"></div>
